--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.2",
     "next": "14.0.4",
     "react": "^18",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18",
     "react-modal": "^3.16.1",
     "react-player": "^2.13.0"
