--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18",
     "react-modal": "^3.16.1",
-    "react-player": "^2.13.0"
+    "react-player": "^2.13.0",
+    "react-typed": "^1.2.0"
   },
   "devDependencies": {
     "eslint": "^8",
