--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
+    "dotenv": "^16.3.1",
     "next": "14.0.4",
     "react": "^18",
     "react-bootstrap-icons": "^1.10.3",
